# MathForge

./: .gitignore  README.md  app.py  async_gen.py  config.py  llm_connector.py  playground.py  prompt.py  pyproject.toml  sandbox.py  sync_gen.py  test.md  test.py  test_env.py
logic/: get_env_array.py  llm_connector.py  sandbox.py
prompts/: __init__.py  base.py  distractor.py  expression.py  numerical.py  questionaire.py  solver.py  statement.py  verifier.py
src/: index.html  llm_connector.py  sandbox.py  schema.py  utils.py
