[project]
name = "mathu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.45.2",
    "asyncpg>=0.30.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.5",
    "numpy>=2.2.2",
    "openai>=1.61.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sqlmodel>=0.0.22",
    "sympy>=1.13.3",
]
